# cookiecutter-django-tofu

./: .gitignore  CLAUDE.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  startup.sh
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  deploy-aws.yml  deploy-gcp.yml  infra-aws.yml  infra-gcp.yml
{{cookiecutter.project_slug}}/apps/dashboard/: views.py
{{cookiecutter.project_slug}}/apps/dashboard/templates/dashboard/: index.html
{{cookiecutter.project_slug}}/apps/users/: __init__.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
{{cookiecutter.project_slug}}/apps/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  signup.html
{{cookiecutter.project_slug}}/infra/: .gitignore  backend-dev.hcl  backend-prod.hcl  backend.tf  dev.tfvars  main.tf  prod.tfvars  providers.tf  variables.tf  versions.tf
{{cookiecutter.project_slug}}/infra/aws/: app.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  storage.tf  variables.tf
{{cookiecutter.project_slug}}/infra/gcp/: app.tf  iam.tf  main.tf  outputs.tf  secrets.tf  sql.tf  storage.tf  variables.tf
{{cookiecutter.project_slug}}/scripts/: push-secrets.sh
{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: __init__.py  aws.py  base.py  gcp.py  local.py  production.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  apps.py  forms.py  test_forms.py
